tests/bug_detector_tests/primitiveToObject3.test
################################################################################
#    Copyright (c) 2013, KAIST.
#    All rights reserved.
#
#    Use is subject to license terms.
#
#    This distribution may include materials developed by third parties.
################################################################################
tests=primitiveToObject3
BUGDETECTOR_TESTS_DIR=${JS_HOME}/tests/bug_detector_tests
bug-detector
bug-detector_out_WCIequals=\
 \n\
 \n\
 \n\
 \n\
* Bug Detector * \n\
${BUGDETECTOR_TESTS_DIR}/primitiveToObject3.js:13:1~13:2: [Warning] Trying to convert primitive value(boolean) to object. \n\
${BUGDETECTOR_TESTS_DIR}/primitiveToObject3.js:13:1~13:4: [Warning] Property 'p' is never used. \n\
# ReferenceErrors(#) : 0 \n\
# TypeErrors(#)      : 0 \n\
# Warnings(#)        : 2 \n\
 \n\
 \n\
\n
bug-detector_err_equals=
